--- a/crimeassist/static/style.css
+++ b/crimeassist/static/style.css
@@ -10,7 +10,6 @@ h1, h2, h3, h4, h5, h6 {
 .homebtns{
 margin:13px;
 }
-
 .nav-bg{
   background: black;
 }
@@ -57,6 +56,13 @@ margin:13px;
   margin-left:20%;
   margin-top:40px;
   margin-right:500px;
+}
+
+.video-feed-class{
+
+display:flex;
+margin: 25px 50px;
+justify-content:center ;  
 }
 
 .search-convicts {
