--- a/crimeassist/templates/account.html
+++ b/crimeassist/templates/account.html
@@ -51,7 +51,8 @@
             </div>
 
             <div class="form-group">
-                <h5 class="mb-4 mt-5">Update Password</h5>
+                <legend class="border-bottom mb-4">Update Password</legend>
+                <!-- <h5 class="mb-4 mt-5">Update Password</h5> -->
                 <p class="text-muted">*Skip these fields if you don't want to change Password.</p>
                 {{ form.password.label(class="form-control-label") }}
 
