Added feature - Recognize convicts using images

--- a/crimeassist/templates/addConvict.html
+++ b/crimeassist/templates/addConvict.html
@@ -58,5 +58,10 @@
         <div class="form-group">
             {{ form.submit(class="btn btn-outline-dark") }}
         </div>
+    </div>
+
+    
+
+
     </form>
     {% endblock content%}
