--- a/crimeassist/templates/home.html
+++ b/crimeassist/templates/home.html
@@ -14,7 +14,7 @@
   <div class="col-lg-4 col-md-6 mb-5">
     <div class="card" style="width: 18rem;">
       <div class="card-body">
-        <h5 class="card-title">SEARCH FOR CONVICT</h5>
+        <h5 class="card-title">SEARCH VIA DETAILS</h5>
         <img src="https://i.ibb.co/dm7J0wd/Searchdb.jpg" alt="Searchdb" border="0"></a><br>
         <a href="{{ url_for('searchConvict')}}" class="btn btn-primary homebtns">Search</a>
       </div>
@@ -40,6 +40,17 @@
       </div>
     </div>
   </div>
+
+  <div class="col-lg-4 col-md-6 mb-5">
+    <div class="card" style="width: 18rem;">
+      <div class="card-body">
+        <h5 class="card-title">SEARCH VIA MEDIA</h5>
+        <img src="https://i.ibb.co/dm7J0wd/Searchdb.jpg" alt="Searchdb" border="0"></a><br>
+        <a href="{{ url_for('searchUsingMedia')}}" class="btn btn-primary homebtns">Search</a>
+      </div>
+    </div>
+  </div>
+
 
 </div>
 
