Updated feature - Recognize convicts via image

--- a/crimeassist/static/style.css
+++ b/crimeassist/static/style.css
@@ -58,6 +58,11 @@ margin:13px;
   margin-right:500px;
 }
 
+#recog-img{
+ width:600px;
+ height:400px;
+ margin: 200px 350px;
+}
 .video-feed-class{
 
 display:flex;
