--- a/crimeassist/templates/home.html
+++ b/crimeassist/templates/home.html
@@ -45,12 +45,21 @@
     <div class="card" style="width: 18rem;">
       <div class="card-body">
         <h5 class="card-title">SEARCH VIA MEDIA</h5>
-        <img src="https://i.ibb.co/dm7J0wd/Searchdb.jpg" alt="Searchdb" border="0"></a><br>
+        <img src="https://i.ibb.co/rkHxD2q/media.png" alt="media" border="0"></a><br>
         <a href="{{ url_for('searchUsingMedia')}}" class="btn btn-primary homebtns">Search</a>
       </div>
     </div>
   </div>
 
+  <div class="col-lg-4 col-md-6 mb-5">
+    <div class="card" style="width: 18rem;">
+      <div class="card-body">
+        <h5 class="card-title">SEARCH VIA VIDEO</h5>
+        <img src="https://i.ibb.co/PM5wC7w/live.jpg" alt="live" border="0"></a> <br>
+         <a href="#" class="btn btn-primary homebtns">Search</a>
+      </div>
+    </div>
+  </div>
 
 </div>
 
