Updated Face Login and Recognize via Image features

--- a/crimeassist/templates/home.html
+++ b/crimeassist/templates/home.html
@@ -44,7 +44,7 @@
   <div class="col-lg-4 col-md-6 mb-5">
     <div class="card" style="width: 18rem;">
       <div class="card-body">
-        <h5 class="card-title">SEARCH VIA MEDIA</h5>
+        <h5 class="card-title">SEARCH VIA IMAGE</h5>
         <img src="https://i.ibb.co/rkHxD2q/media.png" alt="media" border="0"></a><br>
         <a href="{{ url_for('searchUsingMedia')}}" class="btn btn-primary homebtns">Search</a>
       </div>
