--- a/crimeassist/templates/layout.html
+++ b/crimeassist/templates/layout.html
@@ -40,7 +40,7 @@
           <!-- Navbar Right Side -->
           <div class="navbar-nav">
             {% if current_user.is_authenticated %}
-            <a class="nav-item nav-link" href="/face_login_setup">Face-Login-Setup</a>
+            <a class="nav-item nav-link" href="/face_login_setup" onclick="return func();">Face-Login-Setup</a>
             <a class="nav-item nav-link" href="/account">Account</a>
             <a class="nav-item nav-link" href="/logout">Logout</a>
             {% else %}
@@ -82,6 +82,22 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
     integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
     crossorigin="anonymous"></script>
-</body>
 
+
+    {% block javascript %}
+    <script>
+    
+        function func()
+        {
+            if (confirm("Set-up Face Login ?") == true) {
+                return true;
+            }
+            else{
+                return false;
+            }
+        }
+    </script>
+    {% endblock javascript %}
+
+</body>
 </html>
