--- a/crimeassist/templates/home.html
+++ b/crimeassist/templates/home.html
@@ -56,7 +56,7 @@
       <div class="card-body">
         <h5 class="card-title">SEARCH VIA VIDEO</h5>
         <img src="https://i.ibb.co/PM5wC7w/live.jpg" alt="live" border="0"></a> <br>
-         <a href="#" class="btn btn-primary homebtns">Search</a>
+         <a href="{{ url_for('upload') }}" class="btn btn-primary homebtns">Search</a>
       </div>
     </div>
   </div>
