--- a/crimeassist/templates/login.html
+++ b/crimeassist/templates/login.html
@@ -46,7 +46,7 @@
         or <a href="{{ url_for('face_login') }}" class="ml-2  btn-outline-info">Face Login</a>
     </div>
     <small class="text-muted ml-2 ">
-        <a href="#">Forgot Password?</a>
+        <a href="{{ url_for('reset_request') }}">Forgot Password?</a>
     </small>
   </form>
 
