--- a/crimeassist/templates/home.html
+++ b/crimeassist/templates/home.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div class="row mt-4">
   <div class="col-lg-4 col-md-6 mb-5">
-    <div class="card" style="width: 18rem;">
+    <div class="card homecards" style="width: 18rem;">
       <div class="card-body">
         <h5 class="card-title">ADD NEW CONVICT</h5>
         <img src="https://i.ibb.co/cv1QTcN/criminal.jpg" alt="criminal" border="0"></a> <br>
@@ -12,7 +12,7 @@
   </div>
 
   <div class="col-lg-4 col-md-6 mb-5">
-    <div class="card" style="width: 18rem;">
+    <div class="card homecards" style="width: 18rem;">
       <div class="card-body">
         <h5 class="card-title">SEARCH VIA DETAILS</h5>
         <img src="https://i.ibb.co/dm7J0wd/Searchdb.jpg" alt="Searchdb" border="0"></a><br>
@@ -22,9 +22,9 @@
   </div>
 
   <div class="col-lg-4 col-md-6 mb-5">
-    <div class="card" style="width: 18rem;">
+    <div class="card homecards" style="width: 18rem;">
       <div class="card-body">
-        <h5 class="card-title">UPDATE DATABASE</h5>
+        <h5 class="card-title">UPDATE RECORDS</h5>
         <img src="https://i.ibb.co/H4mTzcr/updatedb.jpg" alt="updatedb" border="0"></a><br>
         <a href="{{ url_for('update') }}" class="btn btn-primary homebtns">Update</a>
       </div>
@@ -32,7 +32,7 @@
   </div>
 
   <div class="col-lg-4 col-md-6 mb-5">
-    <div class="card" style="width: 18rem;">
+    <div class="card homecards" style="width: 18rem;">
       <div class="card-body">
         <h5 class="card-title">SHOW CONVICTS</h5>
         <img src="https://i.ibb.co/cgJHvSs/showlist.jpg" alt="showlist" border="0"></a>        <br>
@@ -42,7 +42,7 @@
   </div>
 
   <div class="col-lg-4 col-md-6 mb-5">
-    <div class="card" style="width: 18rem;">
+    <div class="card homecards" style="width: 18rem;">
       <div class="card-body">
         <h5 class="card-title">SEARCH VIA IMAGE</h5>
         <img src="https://i.ibb.co/rkHxD2q/media.png" alt="media" border="0"></a><br>
@@ -52,7 +52,7 @@
   </div>
 
   <div class="col-lg-4 col-md-6 mb-5">
-    <div class="card" style="width: 18rem;">
+    <div class="card homecards" style="width: 18rem;">
       <div class="card-body">
         <h5 class="card-title">SEARCH VIA VIDEO</h5>
         <img src="https://i.ibb.co/PM5wC7w/live.jpg" alt="live" border="0"></a> <br>
@@ -62,8 +62,6 @@
   </div>
 
 </div>
-
-
 
 
 
