--- a/crimeassist/templates/layout.html
+++ b/crimeassist/templates/layout.html
@@ -26,7 +26,7 @@
 
 <body>
   <header class="site-header">
-    <nav class="navbar navbar-expand-md nav-bg navbar-dark">
+    <nav class="navbar navbar-expand-md nav-bg navbar-dark border border-dark">
       <div class="container">
         <a class="navbar-brand mr-4" href="/">CRIME ASSIST</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle"
